# learning-c

./: .gitignore  CMakeLists.txt  README.md  TrianglePattern.c  counterControlledIteration.c  design_pattern.md  hello.c  sentinelControlledIteration.c  simpleInterest.c  while.c
LetUsC/Chapter1/: AreaOfTriangle.c  CalculateDistance.c  CalculateTemperature.c  Extercise1.c  ReverseNumber.c  sumOfDigits.c  valueSwap.c
LetUsC/DecisionControl/: even_odd.c  leap_year.c  lottery.c  profit_loss.c
Patterns/: Pattern1.c  Pattern2.c  decreasing_number_in_reverse.c  increment_numbers_in_rows.c  increment_numbers_in_triangle.c  inverted_right_angle_triangle.c  left_right_triangle.c  patterns_example.c  repeat_numbers_in_triangle.c  right_left_reverse_triangle.c  right_left_triangle.c
