cmake_minimum_required(VERSION 3.28)
project(learningC C)

set(CMAKE_C_STANDARD 11)

add_executable(learningC main.c)
add_executable(HELLO hello.c)
add_executable(WHILE while.c)
add_executable(Counter counterControlledIteration.c)
add_executable(Sentinel sentinelControlledIteration.c)
add_executable(SI simpleInterest.c)
add_executable(EX1 LetUsC/Chapter1/Extercise1.c)
add_executable(DistanceCalculate LetUsC/Chapter1/CalculateDistance.c)
add_executable(TemperatureCalculate LetUsC/Chapter1/CalculateTemperature.c)
add_executable(DigitsSum LetUsC/Chapter1/sumOfDigits.c)
add_executable(ReverseNumber LetUsC/Chapter1/ReverseNumber.c)
add_executable(TriangleArea LetUsC/Chapter1/AreaOfTriangle.c)
